<resources>
    <string name="app_name">TodosAppC38Online</string>
    <string name="add_todo">Add Todo</string>
    <string name="enter_your_task_title">Enter your task title ...</string>
    <string name="enter_your_task_description">Enter your task description...</string>
    <string name="select_time">Select Time :</string>
    <string name="add">Add Task</string>
    <string name="title_required">Title Required</string>
    <string name="todo_app">To do List</string>
    <string name="task_date">Task Date</string>
    <string name="select_date">Select Date:</string>
    <string name="delete">Delete</string>
    <string name="edit_task">Edit Task</string>
    <string name="this_is_title">This is Title</string>
    <string name="task_details">Task Details</string>
    <string name="save_changes">Save Changes</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string-array  name="languages">
        <item>Select Language</item>
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="mode">
        <item>Select Light / Dark Mode</item>
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>