<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit_task.EditTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="65dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/baseline_arrow_back_24"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="24dp"
                android:text="@string/todo_app"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/edit_task_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="64dp"
        app:cardCornerRadius="16dp"
        app:layout_anchor="@id/app_bar_layout"
        app:contentPadding="8dp"
        app:layout_anchorGravity="bottom"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_task"
                android:textSize="24sp"
                android:layout_margin="8dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_title_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/this_is_title"
                    android:lines="2"
                    android:maxLines="2"
                    android:minLines="2"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_details_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_title_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/details_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/task_details"
                    android:lines="5"
                    android:maxLines="5"
                    android:minLines="5"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/select_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textSize="20sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/date_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_details_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/select_date"
                app:layout_constraintTop_toBottomOf="@id/text_details_input_layout">

                <TextView
                    android:id="@+id/text_view_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_date"
                    android:textColorHint="@color/grey"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_changes_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50dp"
                android:layout_marginHorizontal="8dp"
                android:backgroundTint="@color/blue"
                android:paddingVertical="12dp"
                android:elevation="12dp"
                android:text="@string/save_changes"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>